--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>YourAccount</members>
+        <members>copado__Copado_Job_Engine</members>
         <name>PermissionSet</name>
     </types>
     <version>57.0</version>
