--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Contact.AssistantName</members>
-        <members>Contact.teamo__c</members>
-        <name>CustomField</name>
+        <members>copado__Pipeline</members>
+        <members>copado__UserStory</members>
+        <name>ApexClass</name>
     </types>
     <version>57.0</version>
 </Package>
