--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>copado__Pipeline</members>
-        <members>copado__Project</members>
-        <members>copado__UserStory</members>
+        <members>copado__GenerateScaRuleSetCtrl</members>
+        <members>copado__LicenseManagerCtrl</members>
         <name>ApexClass</name>
     </types>
     <version>57.0</version>
