--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Contact.Department</members>
+        <members>Account.acco__c</members>
         <name>CustomField</name>
     </types>
     <types>
-        <members>Admin</members>
-        <name>Profile</name>
+        <members>Account-Formato de cuentas</members>
+        <name>Layout</name>
     </types>
     <version>57.0</version>
 </Package>
