--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>customsetting7__c</members>
-        <name>CustomObject</name>
+        <members>Account.Industry</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>Industry</members>
+        <name>StandardValueSet</name>
     </types>
     <version>57.0</version>
 </Package>
